2011-08-09  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control: fixed the name of package and update version number.

2011-08-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* pandora_server.spec: Fixed permissions of data_in/conf/ folder

2011-08-05  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Changed the return value of 
	  get_first_policy_queue.

2011-08-05  Koichiro KIKUCHI  <koichiro@rworks.jp>

	* pandora_server.redhat.spec: Updated dependecies. Removed perl-XML-SAX
	  and added net-snmp-utils (includes snmpget).

	* pandora_server_installer: Removed perl-XML-SAX from message.

2011-08-05  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/PredictionServer.pm: Fixed some network server
	modules are processed as prediction server modules.

2011-07-29  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Send utf8 email properly. 

2011-07-27  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm: Read configuration for the new enterprise
	  SNMP server.
	
	* lib/PandoraFMS/Core.pm: Added server type for the new enterprise SNMP
	  server.

2011-07-21  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed undeclared variable

2011-07-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Use prediction_module to tell
	  prediction modules apart instead of prediction_module/custom_integer_1
	  combinations.

2011-07-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Added support for synthetic
	  modules (enterprise).

2011-07-08  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Delete unknown modules after a defined number
	  of days.

2011-07-08  Koichiro Kikuchi  <koichiro@rworks.jp>

	* lib/PandoraFMS/Core.pm: Fixed alert macro substitution. Now
	  alert_macro_substitute() does not substitute already substituted
	  part of string. Also fixed alert macro substitution for user