@@ -1,3 +1,7 @@
+2011-08-10  Junichi Satoh <junichi@rworks.jp>
+
+	* lib/PandoraFMS/NetworkServer.pm: Added support for IPv6 tcp check.
+
 2011-08-09  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* DEBIAN/control: fixed the name of package and update version number.
